<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">Saleroom</string>
    <string name="title_poruke">Messages</string>
    <string name="title_pocetna">Home</string>
    <string name="title_novioglas">New ad</string>
    <string name="title_mojioglasi">My ads</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="account_deleted">Your account is deleted</string>
    <string name="signed_out">Signed out</string>
    <string name="product_image">Product image</string>
    <string name="filteri">Filters</string>
    <string name="omiljeni">Favorites</string>
    <string name="confirm">Are you sure?</string>
    <string name="delete_product">Delete product</string>
    <string name="deleted">Product is deleted</string>
    <string name="pozovi">Call</string>
    <string name="posalji_poruku">Send message</string>
    <string name="fiksna_cena">fix price</string>
    <string name="dogovor">possible agreement</string>
    <string name="puta">times</string>
    <string name="vidjeno">Seen</string>
    <string name="objavljeno">Published</string>
    <string name="cena">Price</string>
    <string name="lokacija">Location</string>
    <string name="objavio">Posted by</string>
    <string name="delete">Delete</string>
    <string name="pretraga">Search ads</string>
    <string name="kategorija">Category</string>
    <string name="primeni">Apply</string>
    <string name="rastuce">Ascending</string>
    <string name="opadajuce">Descending</string>
    <string name="sortiraj_po_ceni">Sort by price</string>
    <string name="datum_od">Publish date</string>
    <string name="datum_objavljivanja">Published</string>
    <string name="cena_do">From</string>
    <string name="cena_od">To</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="sve">All</string>
    <string name="upozorenje">Fill in all the fields</string>
    <string name="izaberite_sliku">" Choose a photo"</string>
    <string name="oglas_naslov">Post a new ad</string>
    <string name="oglas_postavljen">Ad is posted</string>
    <string name="greska">"Failed "</string>
    <string name="otpremljeno">"Uploaded "</string>
    <string name="naslov">Title</string>
    <string name="din">Din</string>
    <string name="eur">Eur</string>
    <string name="tekst_oglasa">" Ad text"</string>
    <string name="muzika">Music</string>
    <string name="ljubimci">Pets</string>
    <string name="sport">Sport</string>
    <string name="tehnika">Technics</string>
    <string name="dodaci">Appendices</string>
    <string name="uredjenje">Arrangement</string>
    <string name="odabrite_kategoriju">Select a category</string>
    <string name="odeca">Clothes</string>
    <string name="telefoni">Phones</string>
    <string name="bicikl">Bike</string>
    <string name="knjige">Books</string>
    <string name="za_decu">For children</string>
    <string name="obuca">Shoes</string>
    <string name="racunari">Computers</string>
    <string name="igracke">Toys</string>
    <string name="biljke">Plants</string>
    <string name="save">Save</string>
    <string name="enter_the_phone">Enter the phone</string>
    <string name="enter_the_comment">Enter the comment</string>
    <string name="enter_the_location">Enter the location</string>
    <string name="enter_the_username">Enter the username</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="rate">Rate</string>
    <string name="edit">Edit</string>
    <string name="comment_warning">Please, enter the comment!</string>
    <string name="azuriranje_proizvoda">Product is updated!</string>
    <string name="serbian">Serbian</string>
    <string name="english">English</string>
    <string name="change_language">Change language</string>
    <string name="choose_language">Choose language</string>
    <string name="enter_the_message">Enter the message</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_picture">Choose picture</string>
    <string name="profile_picture_updated">Profile picture updated</string>
    <string name="messages">Messages</string>
    <string name="filters">Filters</string>
    <string name="favorites">Favorites</string>
    <string name="my_profile">Profile</string>
    <string name="new_ad">New ad</string>
    <string name="conversations">Conversations</string>
    <string name="change_theme">Change theme</string>
    <string name="choose_theme">Choose theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="facebook_application_id" translatable="false">260324235002954</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb260324235002954</string>
    <string name="twitter_consumer_key" translatable="false">QCyMUrtJUKI2AyMjYGSL5V3cT</string>
    <string name="twitter_consumer_secret" translatable="false">zWKllMoCPdYwtEcQ9oGg8nOs2VNU7kkHiUmdNESjePk16fqg1V</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="ad_reported">Ad is reported</string>
    <string name="conversation_deleted">Conversation is deleted</string>
    <string name="report_ad">Report ad</string>
    <string name="report_ad_confirm">Are you sure you want to report this ad?</string>
    <string name="block_user">Block user</string>
    <string name="block_user_message">Are you sure you want to block this user?</string>
    <string name="user_blocked">User blocked</string>
    <string name="send">Send</string>
    <string-array name="gradovi">
        <item>All</item>
        <item>Belgrade</item>
        <item>Novi Sad</item>
        <item>Nis</item>
        <item>Kragujevac</item>
        <item>Pristina</item>
        <item>Subotica</item>
        <item>Zrenjanin</item>
        <item>Pancevo</item>
        <item>Cacak</item>
        <item>Krusevac</item>
        <item>Kraljevo</item>
        <item>Novi Pazar</item>
        <item>Smederevo</item>
        <item>Leskovac</item>
        <item>Uzice</item>
        <item>Vranje</item>
        <item>Sabac</item>
        <item>Sombor</item>
        <item>Pozarevac</item>
        <item>Pirot</item>
        <item>Zajecar</item>
        <item>Kikinda</item>
        <item>Sremska Mitrovica</item>
        <item>Jagodina</item>
        <item>Vrsac</item>
        <item>Bor</item>
        <item>Prokuplje</item>
        <item>Loznica</item>
    </string-array>
</resources>