<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:fontFamily="@font/alice"
            android:text="@string/cena"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/cenaOd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_50"
            android:autofillHints="@string/cena_od"
            android:fontFamily="@font/alice"
            android:hint="@string/cena_od"
            android:inputType="number"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toStartOf="@+id/cenaDo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/cenaDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_50"
            android:autofillHints="@string/cena_do"
            android:fontFamily="@font/alice"
            android:hint="@string/cena_do"
            android:inputType="number"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cenaOd"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_60"
            android:fontFamily="@font/alice"
            android:text="@string/datum_objavljivanja"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cenaOd" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/datumOd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_40"
            android:background="@drawable/mybutton"
            android:drawableStart="@drawable/ic_date_range"
            android:drawableLeft="@drawable/ic_date_range"
            android:drawablePadding="@dimen/space_4"
            android:fontFamily="@font/alice"
            android:padding="@dimen/space_4"
            android:text="@string/datum_od"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_50"
            android:fontFamily="@font/alice"
            android:text="@string/sortiraj_po_ceni"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datumOd" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/alice"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@id/lokacijaLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/opadajuce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alice"
                android:text="@string/opadajuce"
                android:textColor="@color/primary_text" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rastuce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alice"
                android:text="@string/rastuce"
                android:textColor="@color/primary_text" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/primeni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@drawable/mybutton"
            android:drawableEnd="@drawable/ic_done"
            android:drawableRight="@drawable/ic_done"
            android:drawablePadding="@dimen/space_4"
            android:fontFamily="@font/alice"
            android:padding="@dimen/space_4"
            android:text="@string/primeni"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_40"
            android:fontFamily="@font/alice"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@+id/kategorijaLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lokacijaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_16"
            android:fontFamily="@font/alice"
            android:text="@string/lokacija"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@+id/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/kategorijaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_16"
            android:fontFamily="@font/alice"
            android:text="@string/kategorija"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@+id/kategorija"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/kategorija"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16"
            android:layout_marginBottom="@dimen/space_40"
            android:fontFamily="@font/alice"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@+id/primeni"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>