<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.new_ad.NewAdFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/alice"
            android:gravity="center_horizontal"
            android:text="@string/odabrite_kategoriju"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_novioglas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/alice"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Novi oglas" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:gravity="start"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/odeca"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/odeca"
                    android:src="@drawable/shirt" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:text="@string/odeca"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/mobilni"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/telefoni"
                    android:src="@drawable/mobile" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:text="@string/telefoni"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/bicikl"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/bicikl"
                    android:src="@drawable/byc" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:text="@string/bicikl"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/knjige"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/knjige"
                    android:src="@drawable/book" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:text="@string/knjige"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/decije"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/za_decu"
                    android:src="@drawable/baby" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:text="@string/za_decu"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:gravity="start"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/obuca"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/obuca"
                    android:src="@drawable/boot" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:text="@string/obuca"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/kompjuter"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/racunari"
                    android:src="@drawable/keyboard" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:text="@string/racunari"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/igracke"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/igracke"
                    android:src="@drawable/game" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:text="@string/igracke"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/biljke"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/biljke"
                    android:src="@drawable/plant" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:text="@string/biljke"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/uredjenje"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/uredjenje"
                    android:src="@drawable/paint" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:text="@string/uredjenje"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="?actionBarSize"
                android:fontFamily="@font/alice"
                android:gravity="start"
                android:orientation="vertical"
                android:textColor="@color/primary_text">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/aksesoari"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/dodaci"
                    android:src="@drawable/bag" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:text="@string/dodaci"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/tehnika"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/tehnika"
                    android:src="@drawable/cooker" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:text="@string/tehnika"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/sport"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/sport"
                    android:src="@drawable/gym" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:text="@string/sport"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ljubimci"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/ljubimci"
                    android:src="@drawable/dog" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:text="@string/ljubimci"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/muzika"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/muzika"
                    android:src="@drawable/music" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/alice"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:text="@string/muzika"
                    android:textColor="@color/primary_text"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</ScrollView>